--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <title>Pure Bootstrap Website</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-light bg-dark">
+        <!-- navbar -->
+        <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
             <a href="#" class="navbar-brand">
                 <i class="fas fa-child text-warning fa-2x"></i>
             </a>
@@ -101,6 +102,39 @@
                 </form>
             </div>
         </nav>
+        <!-- end of navbar -->
+
+        <!-- banner -->
+        <section>
+            <div class="container-fluid">
+                <div
+                    class="row bg-info justify-content-center align-items-center"
+                    style="height: 100vh"
+                >
+                    <div class="col-sm-10 text-center">
+                        <h1 class="display-2 text-capitalize">
+                            <span class="text-warning">pure bootstrap </span>
+                            <span class="text-white font-weight-bold"
+                                >website</span
+                            >
+                            <h2
+                                class="font-weight-light font-italic text-light"
+                            >
+                                Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit.
+                            </h2>
+                            <a href="#" class="btn btn-warning btn-lg px-4 m-3"
+                                >Press Here</a
+                            >
+                            <a href="#" class="btn btn-danger btn-lg px-4 m-3"
+                                >Press Here</a
+                            >
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end of banner -->
 
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script
