add skills section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,69 @@
         </section>
         <!-- end of banner -->
 
+        <!-- skills -->
+        <section class="bg-light p-5">
+            <div class="container-fluid">
+                <!-- title -->
+                <div class="row">
+                    <div class="col text-center mb-3">
+                        <h1 class="text-warning display-2">Skills</h1>
+                        <p class="lead text-secondary">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Amet eaque quisquam velit iste sint optio
+                            deserunt a explicabo!
+                        </p>
+                    </div>
+                </div>
+                <!-- end of title -->
+                <div class="row text-center">
+                    <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+                        <i class="fas fa-desktop fa-6x text-warning mb-3"></i>
+                        <h1 class="text-secondary">Development</h1>
+                        <p class="text-muted my-4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Perspiciatis illum maxime obcaecati in,
+                            maiores optio molestiae asperiores nostrum quisquam
+                            tempora atque doloremque soluta quos amet officiis,
+                            nesciunt excepturi earum vitae.
+                        </p>
+                        <a href="#" class="btn btn-outline-warning"
+                            >Learn More</a
+                        >
+                    </div>
+                    <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+                        <i class="far fa-edit fa-6x text-warning mb-3"></i>
+                        <h1 class="text-secondary">Design</h1>
+                        <p class="text-muted my-4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Perspiciatis illum maxime obcaecati in,
+                            maiores optio molestiae asperiores nostrum quisquam
+                            tempora atque doloremque soluta quos amet officiis,
+                            nesciunt excepturi earum vitae.
+                        </p>
+                        <a href="#" class="btn btn-outline-warning"
+                            >Learn More</a
+                        >
+                    </div>
+                    <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+                        <i class="fas fa-cogs fa-6x text-warning mb-3"></i>
+                        <h1 class="text-secondary">Creativity</h1>
+                        <p class="text-muted my-4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Perspiciatis illum maxime obcaecati in,
+                            maiores optio molestiae asperiores nostrum quisquam
+                            tempora atque doloremque soluta quos amet officiis,
+                            nesciunt excepturi earum vitae.
+                        </p>
+                        <a href="#" class="btn btn-outline-warning"
+                            >Learn More</a
+                        >
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end of skills -->
+
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
