add projects sectiong

--- a/index.html
+++ b/index.html
@@ -199,6 +199,75 @@
         </section>
         <!-- end of skills -->
 
+        <!-- projects -->
+        <section class="p-5">
+            <div class="container-fluid">
+                <!-- title -->
+                <div class="row">
+                    <div class="col text-center mb-3">
+                        <h1 class="text-warning display-2">Projects</h1>
+                        <p class="lead text-secondary">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Amet eaque quisquam velit iste sint optio
+                            deserunt a explicabo!
+                        </p>
+                    </div>
+                </div>
+                <!-- end of title -->
+                <div class="row">
+                    <div class="col-lg-3 col-sm-6">
+                        <img
+                            src="images/project1.jpg"
+                            alt=""
+                            class="img-thumbnail"
+                        />
+                        <h2 class="my-3 text-warning">Project One</h2>
+                        <p class="text-muted">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Laudantium quibusdam eligendi soluta et?
+                        </p>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 mt-3">
+                        <img
+                            src="images/project2.jpg"
+                            alt=""
+                            class="img-thumbnail"
+                        />
+                        <h2 class="my-3 text-warning">Project Two</h2>
+                        <p class="text-muted">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Laudantium quibusdam eligendi soluta et?
+                        </p>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 mt-4">
+                        <img
+                            src="images/project3.jpg"
+                            alt=""
+                            class="img-thumbnail"
+                        />
+                        <h2 class="my-3 text-warning">Project Three</h2>
+                        <p class="text-muted">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Laudantium quibusdam eligendi soluta et?
+                        </p>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 mt-5">
+                        <img
+                            src="images/project4.jpg"
+                            alt=""
+                            class="img-thumbnail"
+                        />
+                        <h2 class="my-3 text-warning">Project Four</h2>
+                        <p class="text-muted">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Laudantium quibusdam eligendi soluta et?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end of projects -->
+
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
