add team section

--- a/index.html
+++ b/index.html
@@ -268,6 +268,138 @@
         </section>
         <!-- end of projects -->
 
+        <!-- team -->
+        <section class="p-sm-5 p-2 bg-secondary">
+            <div class="container-fluid">
+                <!-- title -->
+                <div class="row">
+                    <div class="col text-center mb-3">
+                        <h1 class="text-warning display-2">Team</h1>
+                        <p class="lead text-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Amet eaque quisquam velit iste sint optio
+                            deserunt a explicabo!
+                        </p>
+                    </div>
+                </div>
+                <!-- end of title -->
+                <div class="row">
+                    <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+                        <div class="card">
+                            <img
+                                src="images/kid1.jpg"
+                                class="card-img-top"
+                                alt=""
+                            />
+                            <div class="card-body">
+                                <div class="card-title">
+                                    <h3 class="text-muted">Michael</h3>
+                                </div>
+                                <div class="card-subtitle">
+                                    <p class="lead text-secondary">
+                                        Lorem ipsum dolor, sit amet consectetur
+                                        adipisicing elit.
+                                    </p>
+                                    <div class="text-right">
+                                        <a href="#">
+                                            <i
+                                                class="fab fa-facebook fa-2x mx-2 text-primary"
+                                            ></i>
+                                        </a>
+                                        <a href="#">
+                                            <i
+                                                class="fab fa-twitter fa-2x mx-2 text-info"
+                                            ></i>
+                                        </a>
+                                        <a href="#">
+                                            <i
+                                                class="fab fa-youtube fa-2x mx-2 text-danger"
+                                            ></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+                        <div class="card">
+                            <img
+                                src="images/kid2.jpg"
+                                class="card-img-top"
+                                alt=""
+                            />
+                            <div class="card-body">
+                                <div class="card-title">
+                                    <h3 class="text-muted">Jack</h3>
+                                </div>
+                                <div class="card-subtitle">
+                                    <p class="lead text-secondary">
+                                        Lorem ipsum dolor, sit amet consectetur
+                                        adipisicing elit.
+                                    </p>
+                                    <div class="text-right">
+                                        <a href="#">
+                                            <i
+                                                class="fab fa-facebook fa-2x mx-2 text-primary"
+                                            ></i>
+                                        </a>
+                                        <a href="#">
+                                            <i
+                                                class="fab fa-twitter fa-2x mx-2 text-info"
+                                            ></i>
+                                        </a>
+                                        <a href="#">
+                                            <i
+                                                class="fab fa-youtube fa-2x mx-2 text-danger"
+                                            ></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+                        <div class="card">
+                            <img
+                                src="images/kid3.jpg"
+                                class="card-img-top"
+                                alt=""
+                            />
+                            <div class="card-body">
+                                <div class="card-title">
+                                    <h3 class="text-muted">Ann</h3>
+                                </div>
+                                <div class="card-subtitle">
+                                    <p class="lead text-secondary">
+                                        Lorem ipsum dolor, sit amet consectetur
+                                        adipisicing elit.
+                                    </p>
+                                    <div class="text-right">
+                                        <a href="#">
+                                            <i
+                                                class="fab fa-facebook fa-2x mx-2 text-primary"
+                                            ></i>
+                                        </a>
+                                        <a href="#">
+                                            <i
+                                                class="fab fa-twitter fa-2x mx-2 text-info"
+                                            ></i>
+                                        </a>
+                                        <a href="#">
+                                            <i
+                                                class="fab fa-youtube fa-2x mx-2 text-danger"
+                                            ></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end of team -->
+
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
