--- a/index.html
+++ b/index.html
@@ -400,6 +400,68 @@
         </section>
         <!-- end of team -->
 
+        <!-- progress -->
+        <section class="p-5">
+            <div class="container-fluid">
+                <!-- title -->
+                <div class="row">
+                    <div class="col text-center mb-3">
+                        <h1 class="text-warning display-2">Progress</h1>
+                        <p class="lead text-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Amet eaque quisquam velit iste sint optio
+                            deserunt a explicabo!
+                        </p>
+                    </div>
+                </div>
+                <!-- end of title -->
+                <div class="row justify-content-center">
+                    <div class="col-lg-6 text-secondary">
+                        <h2>HTML</h2>
+                        <div class="progress bg-secondary mb-3">
+                            <div class="progress-bar" style="width: 50%">
+                                50%
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 text-secondary">
+                        <h2>CSS</h2>
+                        <div class="progress bg-secondary mb-3">
+                            <div
+                                class="progress-bar bg-danger"
+                                style="width: 70%"
+                            >
+                                70%
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 text-secondary">
+                        <h2>Javascript</h2>
+                        <div class="progress bg-secondary mb-3">
+                            <div
+                                class="progress-bar bg-warning"
+                                style="width: 90%"
+                            >
+                                90%
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 text-secondary">
+                        <h2>Bootstrap</h2>
+                        <div class="progress bg-secondary mb-3">
+                            <div
+                                class="progress-bar bg-success"
+                                style="width: 95%"
+                            >
+                                95%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end of progress -->
+
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
