--- a/index.html
+++ b/index.html
@@ -462,6 +462,65 @@
         </section>
         <!-- end of progress -->
 
+        <!-- contact -->
+        <section class="p-5 bg-light">
+            <div class="container-fluid">
+                <!-- title -->
+                <div class="row">
+                    <div class="col text-center mb-3">
+                        <h1 class="text-warning display-2">Contact Us</h1>
+                        <p class="lead text-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Amet eaque quisquam velit iste sint optio
+                            deserunt a explicabo!
+                        </p>
+                    </div>
+                </div>
+                <!-- end of title -->
+                <div class="row justify-content-center">
+                    <div class="col-lg-6 col-md-8 col-sm-10">
+                        <div class="text-center text-secondary">
+                            <h2>Got Question ?</h2>
+                            <p>Stay Connected</p>
+                        </div>
+                        <form class="text muted">
+                            <div class="form-group">
+                                <label for="name">Name</label>
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    id="name"
+                                />
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    id="email"
+                                />
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea
+                                    class="form-control"
+                                    id="message"
+                                    rows="3"
+                                ></textarea>
+                            </div>
+                            <button
+                                class="btn btn-outline-warning btn-block"
+                                type="submit"
+                            >
+                                Submit Question
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end of contact -->
+
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
