add footer and change typo

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             crossorigin="anonymous"
         ></script>
         <title>Pure Bootstrap Website</title>
+        <link
+            href="https://fonts.googleapis.com/css?family=Noto+Sans+KR"
+            rel="stylesheet"
+        />
+        <style>
+            body {
+                font-family: "Noto Sans KR", sans-serif;
+            }
+        </style>
     </head>
     <body>
         <!-- navbar -->
@@ -520,6 +529,52 @@
             </div>
         </section>
         <!-- end of contact -->
+
+        <!-- footer -->
+        <footer class="bg-secondary">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center">
+                        <h1
+                            class="text-white font-weight-light text-capitalize p-3"
+                        >
+                            pure bootstrap project
+                        </h1>
+                        <h3
+                            class="text-light font-weight-light font-italic mb-3"
+                        >
+                            Lorem ipsum dolor sit amet.
+                        </h3>
+                        <div class="py-2">
+                            <a href="#"
+                                ><i
+                                    class="fab fa-facebook fa-2x text-primary mx-3"
+                                ></i
+                            ></a>
+                            <a href="#"
+                                ><i
+                                    class="fab fa-google-plus fa-2x text-danger mx-3"
+                                ></i
+                            ></a>
+                            <a href="#"
+                                ><i
+                                    class="fab fa-twitter fa-2x text-info mx-3"
+                                ></i
+                            ></a>
+                            <a href="#"
+                                ><i
+                                    class="fab fa-youtube fa-2x text-danger mx-3"
+                                ></i
+                            ></a>
+                        </div>
+                        <p class="text-light py-4 m-0">
+                            &copy;Copyright 2019 - Made by Cédric Oloa
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- end of footer -->
 
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script
