--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 <div class="row">
                     <div class="col text-center mb-3">
                         <h1 class="text-warning display-2">Progress</h1>
-                        <p class="lead text-light">
+                        <p class="lead text-secondary">
                             Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Amet eaque quisquam velit iste sint optio
                             deserunt a explicabo!
@@ -478,7 +478,7 @@
                 <div class="row">
                     <div class="col text-center mb-3">
                         <h1 class="text-warning display-2">Contact Us</h1>
-                        <p class="lead text-light">
+                        <p class="lead text-secondary">
                             Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Amet eaque quisquam velit iste sint optio
                             deserunt a explicabo!
